week06 - ChIP-seq and Motif Finding/ER4lmt500/dreme_msgs.txt
  File "/Users/Gungnir/meme/bin/dreme", line 760
    print "Finding secondary RE in left flank..."
                                                ^
SyntaxError: Missing parentheses in call to 'print'
